--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,28 @@
+// {
+//     "rewrites": [
+//         { "source": "/(.*)", "destination": "/" }
+//     ]
+// }
+
+// {
+//   "rewrites": [
+//     {
+//       "source": "/api/:path*",
+//       "destination": "https://yummy-food-app-backend.onrender.com/:path*"
+//     }
+//   ]
+// }
+
 {
-    "rewrites": [
-        { "source": "/(.*)", "destination": "/" }
-    ]
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://yummy-food-app-backend.onrender.com/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ]
 }
+
